--- a/stylesheets/improves.css
+++ b/stylesheets/improves.css
@@ -9,6 +9,11 @@
 .main.container .casino .search.icon {
     cursor: pointer;
 }
+.main.container .casino ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
 
 .main.container .casino button {
     border: 0;
@@ -19,4 +24,18 @@
     color: #FF4444;
     font-size: 14px;
     font-weight: bold;
+}
+
+.ui.divided.items > .item {
+    border-top-width: 0;
+    border-bottom: 1px solid rgba(39, 41, 43, .15);
+}
+
+.ui.relaxed.divided.items > .item {
+    padding: 0em 0em 1.5em 0em;
+    margin-bottom: 1.5em;
+}
+
+.ui.divided.items > .item:last-child {
+    padding-bottom: 1.5em !important;
 }
